# awfm

./: .gitignore  CMakeLists.txt  abstractaquiferdrawdownmodel.cpp  abstractaquiferdrawdownmodel.h  abstractdataframe.h  abstractwelllossmodel.cpp  abstractwelllossmodel.h  aquiferdrawdowndlg.cpp  aquiferdrawdowndlg.h  awfmchart.cpp  awfmchart.h  awfmchartview.cpp  awfmchartview.h  awfmtablewidget.cpp  awfmtablewidget.h  csvdataframe.cpp  csvdataframe.h  dbio.cpp  dbio.h  definitions.h  editwellsdlg.cpp  editwellsdlg.h  importdlg.cpp  importdlg.h  io.cpp  io.h  jacobsimplifiedwellloss.cpp  jacobsimplifiedwellloss.h  jacobwellloss.cpp  jacobwellloss.h  main.cpp  mainwindow.cpp  mainwindow.h  measure.cpp  measure.h  minpack.cpp  minpack.h  minpacksettingsdlg.cpp  minpacksettingsdlg.h  model.cpp  (+34 more)
documentation/tex/: awfm.aux  awfm.out  awfm.tex  awfm.toc
libs/awfm/include/: abstractaquiferdrawdownmodel.h  testing.h  timeseries.h  well.h
libs/awfm/src/: CMakeLists.txt  io.cpp  slatec.f  specialfunctions.cpp  testing.cpp  theis.cpp  timeseries.cpp  well.cpp
libs/sqlite3/: CMakeLists.txt
pyhelpers/: create_db_sql_to_c.py
resources/: create_db.cpp  create_db.h  create_db.sql  grammar.bnf
testing/: testdatabase.db
